Lesson 6 done
Some fix